monga.output
Grammar

    0 $accept: program $end

    1 program: definition_list

    2 definition_list: definition_list definition
    3                | /* empty */

    4 definition: definition_var
    5           | definition_func

    6 definition_var: type name_list ';'

    7 name_list: TK_ID
    8          | name_list ',' TK_ID

    9 type: base_type
   10     | type '[' ']'

   11 base_type: TK_KEY_INT
   12          | TK_KEY_FLOAT
   13          | TK_KEY_CHAR

   14 definition_func: type TK_ID '(' func_param_list ')' block
   15                | TK_KEY_VOID TK_ID '(' func_param_list ')' block

   16 func_param_list: param_list
   17                | /* empty */

   18 param_list: param
   19           | param_list ',' param

   20 param: type TK_ID

   21 block: '{' definition_var_list command_list '}'

   22 definition_var_list: definition_var_list definition_var
   23                    | /* empty */

   24 command_list: command_list command
   25             | /* empty */

   26 command: TK_KEY_IF '(' exp ')' command
   27        | TK_KEY_IF '(' exp ')' command_x TK_KEY_ELSE command
   28        | TK_KEY_WHILE '(' exp ')' command
   29        | var '=' exp ';'
   30        | command_return ';'
   31        | func_call ';'
   32        | block

   33 command_x: TK_KEY_IF '(' exp ')' command_x TK_KEY_ELSE command_x
   34          | TK_KEY_WHILE '(' exp ')' command_x
   35          | var '=' exp ';'
   36          | command_return ';'
   37          | func_call ';'
   38          | block

   39 command_return: TK_KEY_RETURN
   40               | TK_KEY_RETURN exp

   41 var: TK_ID
   42    | exp_simple '[' exp ']'

   43 exp: exp_or

   44 exp_or: exp_and TK_OR exp_comp
   45       | exp_and

   46 exp_and: exp_and TK_AND exp_comp
   47        | exp_comp

   48 exp_comp: exp_comp TK_EQUAL exp_add
   49         | exp_comp TK_LEQUAL exp_add
   50         | exp_comp TK_GEQUAL exp_add
   51         | exp_comp '<' exp_add
   52         | exp_comp '>' exp_add
   53         | exp_add

   54 exp_add: exp_add '+' exp_mul
   55        | exp_add '-' exp_mul
   56        | exp_mul

   57 exp_mul: exp_mul '*' exp_unary
   58        | exp_mul '/' exp_unary
   59        | exp_unary

   60 exp_unary: '-' exp_simple
   61          | '!' exp_simple
   62          | exp_simple

   63 exp_simple: TK_INT
   64           | TK_FLOAT
   65           | TK_STR
   66           | var
   67           | '(' exp ')'
   68           | func_call
   69           | TK_KEY_NEW type '[' exp ']'

   70 func_call: TK_ID '(' ')'
   71          | TK_ID '(' exp_list ')'

   72 exp_list: exp
   73         | exp_list ',' exp


Terminals, with rules where they appear

$end (0) 0
'!' (33) 61
'(' (40) 14 15 26 27 28 33 34 67 70 71
')' (41) 14 15 26 27 28 33 34 67 70 71
'*' (42) 57
'+' (43) 54
',' (44) 8 19 73
'-' (45) 55 60
'/' (47) 58
';' (59) 6 29 30 31 35 36 37
'<' (60) 51
'=' (61) 29 35
'>' (62) 52
'[' (91) 10 42 69
']' (93) 10 42 69
'{' (123) 21
'}' (125) 21
error (256)
TK_KEY_INT (258) 11
TK_KEY_FLOAT (259) 12
TK_KEY_CHAR (260) 13
TK_KEY_IF (261) 26 27 33
TK_KEY_ELSE (262) 27 33
TK_KEY_WHILE (263) 28 34
TK_KEY_NEW (264) 69
TK_KEY_RETURN (265) 39 40
TK_KEY_VOID (266) 15
TK_EQUAL (267) 48
TK_LEQUAL (268) 49
TK_GEQUAL (269) 50
TK_AND (270) 46
TK_OR (271) 44
TK_ID (272) 7 8 14 15 20 41 70 71
TK_INT (273) 63
TK_FLOAT (274) 64
TK_STR (275) 65


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1, on right: 0
definition_list (39)
    on left: 2 3, on right: 1 2
definition (40)
    on left: 4 5, on right: 2
definition_var (41)
    on left: 6, on right: 4 22
name_list (42)
    on left: 7 8, on right: 6 8
type (43)
    on left: 9 10, on right: 6 10 14 20 69
base_type (44)
    on left: 11 12 13, on right: 9
definition_func (45)
    on left: 14 15, on right: 5
func_param_list (46)
    on left: 16 17, on right: 14 15
param_list (47)
    on left: 18 19, on right: 16 19
param (48)
    on left: 20, on right: 18 19
block (49)
    on left: 21, on right: 14 15 32 38
definition_var_list (50)
    on left: 22 23, on right: 21 22
command_list (51)
    on left: 24 25, on right: 21 24
command (52)
    on left: 26 27 28 29 30 31 32, on right: 24 26 27 28
command_x (53)
    on left: 33 34 35 36 37 38, on right: 27 33 34
command_return (54)
    on left: 39 40, on right: 30 36
var (55)
    on left: 41 42, on right: 29 35 66
exp (56)
    on left: 43, on right: 26 27 28 29 33 34 35 40 42 67 69 72 73
exp_or (57)
    on left: 44 45, on right: 43
exp_and (58)
    on left: 46 47, on right: 44 45 46
exp_comp (59)
    on left: 48 49 50 51 52 53, on right: 44 46 47 48 49 50 51 52
exp_add (60)
    on left: 54 55 56, on right: 48 49 50 51 52 53 54 55
exp_mul (61)
    on left: 57 58 59, on right: 54 55 56 57 58
exp_unary (62)
    on left: 60 61 62, on right: 57 58 59
exp_simple (63)
    on left: 63 64 65 66 67 68 69, on right: 42 60 61 62
func_call (64)
    on left: 70 71, on right: 31 37 68
exp_list (65)
    on left: 72 73, on right: 71 73


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (definition_list)

    program          go to state 1
    definition_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: definition_list .
    2 definition_list: definition_list . definition

    TK_KEY_INT    shift, and go to state 4
    TK_KEY_FLOAT  shift, and go to state 5
    TK_KEY_CHAR   shift, and go to state 6
    TK_KEY_VOID   shift, and go to state 7

    $default  reduce using rule 1 (program)

    definition       go to state 8
    definition_var   go to state 9
    type             go to state 10
    base_type        go to state 11
    definition_func  go to state 12


state 3

    0 $accept: program $end .

    $default  accept


state 4

   11 base_type: TK_KEY_INT .

    $default  reduce using rule 11 (base_type)


state 5

   12 base_type: TK_KEY_FLOAT .

    $default  reduce using rule 12 (base_type)


state 6

   13 base_type: TK_KEY_CHAR .

    $default  reduce using rule 13 (base_type)


state 7

   15 definition_func: TK_KEY_VOID . TK_ID '(' func_param_list ')' block

    TK_ID  shift, and go to state 13


state 8

    2 definition_list: definition_list definition .

    $default  reduce using rule 2 (definition_list)


state 9

    4 definition: definition_var .

    $default  reduce using rule 4 (definition)


state 10

    6 definition_var: type . name_list ';'
   10 type: type . '[' ']'
   14 definition_func: type . TK_ID '(' func_param_list ')' block

    TK_ID  shift, and go to state 14
    '['    shift, and go to state 15

    name_list  go to state 16


state 11

    9 type: base_type .

    $default  reduce using rule 9 (type)


state 12

    5 definition: definition_func .

    $default  reduce using rule 5 (definition)


state 13

   15 definition_func: TK_KEY_VOID TK_ID . '(' func_param_list ')' block

    '('  shift, and go to state 17


state 14

    7 name_list: TK_ID .
   14 definition_func: type TK_ID . '(' func_param_list ')' block

    '('  shift, and go to state 18

    $default  reduce using rule 7 (name_list)


state 15

   10 type: type '[' . ']'

    ']'  shift, and go to state 19


state 16

    6 definition_var: type name_list . ';'
    8 name_list: name_list . ',' TK_ID

    ';'  shift, and go to state 20
    ','  shift, and go to state 21


state 17

   15 definition_func: TK_KEY_VOID TK_ID '(' . func_param_list ')' block

    TK_KEY_INT    shift, and go to state 4
    TK_KEY_FLOAT  shift, and go to state 5
    TK_KEY_CHAR   shift, and go to state 6

    $default  reduce using rule 17 (func_param_list)

    type             go to state 22
    base_type        go to state 11
    func_param_list  go to state 23
    param_list       go to state 24
    param            go to state 25


state 18

   14 definition_func: type TK_ID '(' . func_param_list ')' block

    TK_KEY_INT    shift, and go to state 4
    TK_KEY_FLOAT  shift, and go to state 5
    TK_KEY_CHAR   shift, and go to state 6

    $default  reduce using rule 17 (func_param_list)

    type             go to state 22
    base_type        go to state 11
    func_param_list  go to state 26
    param_list       go to state 24
    param            go to state 25


state 19

   10 type: type '[' ']' .

    $default  reduce using rule 10 (type)


state 20

    6 definition_var: type name_list ';' .

    $default  reduce using rule 6 (definition_var)


state 21

    8 name_list: name_list ',' . TK_ID

    TK_ID  shift, and go to state 27


state 22

   10 type: type . '[' ']'
   20 param: type . TK_ID

    TK_ID  shift, and go to state 28
    '['    shift, and go to state 15


state 23

   15 definition_func: TK_KEY_VOID TK_ID '(' func_param_list . ')' block

    ')'  shift, and go to state 29


state 24

   16 func_param_list: param_list .
   19 param_list: param_list . ',' param

    ','  shift, and go to state 30

    $default  reduce using rule 16 (func_param_list)


state 25

   18 param_list: param .

    $default  reduce using rule 18 (param_list)


state 26

   14 definition_func: type TK_ID '(' func_param_list . ')' block

    ')'  shift, and go to state 31


state 27

    8 name_list: name_list ',' TK_ID .

    $default  reduce using rule 8 (name_list)


state 28

   20 param: type TK_ID .

    $default  reduce using rule 20 (param)


state 29

   15 definition_func: TK_KEY_VOID TK_ID '(' func_param_list ')' . block

    '{'  shift, and go to state 32

    block  go to state 33


state 30

   19 param_list: param_list ',' . param

    TK_KEY_INT    shift, and go to state 4
    TK_KEY_FLOAT  shift, and go to state 5
    TK_KEY_CHAR   shift, and go to state 6

    type       go to state 22
    base_type  go to state 11
    param      go to state 34


state 31

   14 definition_func: type TK_ID '(' func_param_list ')' . block

    '{'  shift, and go to state 32

    block  go to state 35


state 32

   21 block: '{' . definition_var_list command_list '}'

    $default  reduce using rule 23 (definition_var_list)

    definition_var_list  go to state 36


state 33

   15 definition_func: TK_KEY_VOID TK_ID '(' func_param_list ')' block .

    $default  reduce using rule 15 (definition_func)


state 34

   19 param_list: param_list ',' param .

    $default  reduce using rule 19 (param_list)


state 35

   14 definition_func: type TK_ID '(' func_param_list ')' block .

    $default  reduce using rule 14 (definition_func)


state 36

   21 block: '{' definition_var_list . command_list '}'
   22 definition_var_list: definition_var_list . definition_var

    TK_KEY_INT    shift, and go to state 4
    TK_KEY_FLOAT  shift, and go to state 5
    TK_KEY_CHAR   shift, and go to state 6

    $default  reduce using rule 25 (command_list)

    definition_var  go to state 37
    type            go to state 38
    base_type       go to state 11
    command_list    go to state 39


state 37

   22 definition_var_list: definition_var_list definition_var .

    $default  reduce using rule 22 (definition_var_list)


state 38

    6 definition_var: type . name_list ';'
   10 type: type . '[' ']'

    TK_ID  shift, and go to state 40
    '['    shift, and go to state 15

    name_list  go to state 16


state 39

   21 block: '{' definition_var_list command_list . '}'
   24 command_list: command_list . command

    TK_KEY_IF      shift, and go to state 41
    TK_KEY_WHILE   shift, and go to state 42
    TK_KEY_NEW     shift, and go to state 43
    TK_KEY_RETURN  shift, and go to state 44
    TK_ID          shift, and go to state 45
    TK_INT         shift, and go to state 46
    TK_FLOAT       shift, and go to state 47
    TK_STR         shift, and go to state 48
    '('            shift, and go to state 49
    '{'            shift, and go to state 32
    '}'            shift, and go to state 50

    block           go to state 51
    command         go to state 52
    command_return  go to state 53
    var             go to state 54
    exp_simple      go to state 55
    func_call       go to state 56


state 40

    7 name_list: TK_ID .

    $default  reduce using rule 7 (name_list)


state 41

   26 command: TK_KEY_IF . '(' exp ')' command
   27        | TK_KEY_IF . '(' exp ')' command_x TK_KEY_ELSE command

    '('  shift, and go to state 57


state 42

   28 command: TK_KEY_WHILE . '(' exp ')' command

    '('  shift, and go to state 58


state 43

   69 exp_simple: TK_KEY_NEW . type '[' exp ']'

    TK_KEY_INT    shift, and go to state 4
    TK_KEY_FLOAT  shift, and go to state 5
    TK_KEY_CHAR   shift, and go to state 6

    type       go to state 59
    base_type  go to state 11


state 44

   39 command_return: TK_KEY_RETURN .
   40               | TK_KEY_RETURN . exp

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    $default  reduce using rule 39 (command_return)

    var         go to state 62
    exp         go to state 63
    exp_or      go to state 64
    exp_and     go to state 65
    exp_comp    go to state 66
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 45

   41 var: TK_ID .
   70 func_call: TK_ID . '(' ')'
   71          | TK_ID . '(' exp_list ')'

    '('  shift, and go to state 72

    $default  reduce using rule 41 (var)


state 46

   63 exp_simple: TK_INT .

    $default  reduce using rule 63 (exp_simple)


state 47

   64 exp_simple: TK_FLOAT .

    $default  reduce using rule 64 (exp_simple)


state 48

   65 exp_simple: TK_STR .

    $default  reduce using rule 65 (exp_simple)


state 49

   67 exp_simple: '(' . exp ')'

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp         go to state 73
    exp_or      go to state 64
    exp_and     go to state 65
    exp_comp    go to state 66
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 50

   21 block: '{' definition_var_list command_list '}' .

    $default  reduce using rule 21 (block)


state 51

   32 command: block .

    $default  reduce using rule 32 (command)


state 52

   24 command_list: command_list command .

    $default  reduce using rule 24 (command_list)


state 53

   30 command: command_return . ';'

    ';'  shift, and go to state 74


state 54

   29 command: var . '=' exp ';'
   66 exp_simple: var .

    '='  shift, and go to state 75

    $default  reduce using rule 66 (exp_simple)


state 55

   42 var: exp_simple . '[' exp ']'

    '['  shift, and go to state 76


state 56

   31 command: func_call . ';'
   68 exp_simple: func_call .

    ';'  shift, and go to state 77

    $default  reduce using rule 68 (exp_simple)


state 57

   26 command: TK_KEY_IF '(' . exp ')' command
   27        | TK_KEY_IF '(' . exp ')' command_x TK_KEY_ELSE command

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp         go to state 78
    exp_or      go to state 64
    exp_and     go to state 65
    exp_comp    go to state 66
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 58

   28 command: TK_KEY_WHILE '(' . exp ')' command

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp         go to state 79
    exp_or      go to state 64
    exp_and     go to state 65
    exp_comp    go to state 66
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 59

   10 type: type . '[' ']'
   69 exp_simple: TK_KEY_NEW type . '[' exp ']'

    '['  shift, and go to state 80


state 60

   60 exp_unary: '-' . exp_simple

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49

    var         go to state 62
    exp_simple  go to state 81
    func_call   go to state 71


state 61

   61 exp_unary: '!' . exp_simple

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49

    var         go to state 62
    exp_simple  go to state 82
    func_call   go to state 71


state 62

   66 exp_simple: var .

    $default  reduce using rule 66 (exp_simple)


state 63

   40 command_return: TK_KEY_RETURN exp .

    $default  reduce using rule 40 (command_return)


state 64

   43 exp: exp_or .

    $default  reduce using rule 43 (exp)


state 65

   44 exp_or: exp_and . TK_OR exp_comp
   45       | exp_and .
   46 exp_and: exp_and . TK_AND exp_comp

    TK_AND  shift, and go to state 83
    TK_OR   shift, and go to state 84

    $default  reduce using rule 45 (exp_or)


state 66

   47 exp_and: exp_comp .
   48 exp_comp: exp_comp . TK_EQUAL exp_add
   49         | exp_comp . TK_LEQUAL exp_add
   50         | exp_comp . TK_GEQUAL exp_add
   51         | exp_comp . '<' exp_add
   52         | exp_comp . '>' exp_add

    TK_EQUAL   shift, and go to state 85
    TK_LEQUAL  shift, and go to state 86
    TK_GEQUAL  shift, and go to state 87
    '<'        shift, and go to state 88
    '>'        shift, and go to state 89

    $default  reduce using rule 47 (exp_and)


state 67

   53 exp_comp: exp_add .
   54 exp_add: exp_add . '+' exp_mul
   55        | exp_add . '-' exp_mul

    '+'  shift, and go to state 90
    '-'  shift, and go to state 91

    $default  reduce using rule 53 (exp_comp)


state 68

   56 exp_add: exp_mul .
   57 exp_mul: exp_mul . '*' exp_unary
   58        | exp_mul . '/' exp_unary

    '*'  shift, and go to state 92
    '/'  shift, and go to state 93

    $default  reduce using rule 56 (exp_add)


state 69

   59 exp_mul: exp_unary .

    $default  reduce using rule 59 (exp_mul)


state 70

   42 var: exp_simple . '[' exp ']'
   62 exp_unary: exp_simple .

    '['  shift, and go to state 76

    $default  reduce using rule 62 (exp_unary)


state 71

   68 exp_simple: func_call .

    $default  reduce using rule 68 (exp_simple)


state 72

   70 func_call: TK_ID '(' . ')'
   71          | TK_ID '(' . exp_list ')'

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    ')'         shift, and go to state 94
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp         go to state 95
    exp_or      go to state 64
    exp_and     go to state 65
    exp_comp    go to state 66
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71
    exp_list    go to state 96


state 73

   67 exp_simple: '(' exp . ')'

    ')'  shift, and go to state 97


state 74

   30 command: command_return ';' .

    $default  reduce using rule 30 (command)


state 75

   29 command: var '=' . exp ';'

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp         go to state 98
    exp_or      go to state 64
    exp_and     go to state 65
    exp_comp    go to state 66
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 76

   42 var: exp_simple '[' . exp ']'

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp         go to state 99
    exp_or      go to state 64
    exp_and     go to state 65
    exp_comp    go to state 66
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 77

   31 command: func_call ';' .

    $default  reduce using rule 31 (command)


state 78

   26 command: TK_KEY_IF '(' exp . ')' command
   27        | TK_KEY_IF '(' exp . ')' command_x TK_KEY_ELSE command

    ')'  shift, and go to state 100


state 79

   28 command: TK_KEY_WHILE '(' exp . ')' command

    ')'  shift, and go to state 101


state 80

   10 type: type '[' . ']'
   69 exp_simple: TK_KEY_NEW type '[' . exp ']'

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    ']'         shift, and go to state 19
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp         go to state 102
    exp_or      go to state 64
    exp_and     go to state 65
    exp_comp    go to state 66
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 81

   42 var: exp_simple . '[' exp ']'
   60 exp_unary: '-' exp_simple .

    '['  shift, and go to state 76

    $default  reduce using rule 60 (exp_unary)


state 82

   42 var: exp_simple . '[' exp ']'
   61 exp_unary: '!' exp_simple .

    '['  shift, and go to state 76

    $default  reduce using rule 61 (exp_unary)


state 83

   46 exp_and: exp_and TK_AND . exp_comp

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_comp    go to state 103
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 84

   44 exp_or: exp_and TK_OR . exp_comp

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_comp    go to state 104
    exp_add     go to state 67
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 85

   48 exp_comp: exp_comp TK_EQUAL . exp_add

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_add     go to state 105
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 86

   49 exp_comp: exp_comp TK_LEQUAL . exp_add

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_add     go to state 106
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 87

   50 exp_comp: exp_comp TK_GEQUAL . exp_add

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_add     go to state 107
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 88

   51 exp_comp: exp_comp '<' . exp_add

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_add     go to state 108
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 89

   52 exp_comp: exp_comp '>' . exp_add

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_add     go to state 109
    exp_mul     go to state 68
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 90

   54 exp_add: exp_add '+' . exp_mul

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_mul     go to state 110
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 91

   55 exp_add: exp_add '-' . exp_mul

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_mul     go to state 111
    exp_unary   go to state 69
    exp_simple  go to state 70
    func_call   go to state 71


state 92

   57 exp_mul: exp_mul '*' . exp_unary

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_unary   go to state 112
    exp_simple  go to state 70
    func_call   go to state 71


state 93

   58 exp_mul: exp_mul '/' . exp_unary

    TK_KEY_NEW  shift, and go to state 43
    TK_ID       shift, and go to state 45
    TK_INT      shift, and go to state 46
    TK_FLOAT    shift, and go to state 47
    TK_STR      shift, and go to state 48
    '('         shift, and go to state 49
    '-'         shift, and go to state 60
    '!'         shift, and go to state 61

    var         go to state 62
    exp_unary   go to state 113
    exp_simple  go to state 70
    func_call   go to state 71


state 94

   70 func_call: TK_ID '(' ')' .

    $default  reduce using rule 70 (func_call)


state 95

   72 exp_list: exp .

    $default  reduce using rule 72 (exp_list)


state 96

   71 func_call: TK_ID '(' exp_list . ')'
   73 exp_list: exp_list . ',' exp

    ','  shift, and go to state 114
    ')'  shift, and go to state 115


state 97

   67 exp_simple: '(' exp ')' .

    $default  reduce using rule 67 (exp_simple)


state 98

   29 command: var '=' exp . ';'

    ';'  shift, and go to state 116


state 99

   42 var: exp_simple '[' exp . ']'

    ']'  shift, and go to state 117


state 100

   26 command: TK_KEY_IF '(' exp ')' . command
   27        | TK_KEY_IF '(' exp ')' . command_x TK_KEY_ELSE command

    TK_KEY_IF      shift, and go to state 118
    TK_KEY_WHILE   shift, and go to state 119
    TK_KEY_NEW     shift, and go to state 43
    TK_KEY_RETURN  shift, and go to state 44
    TK_ID          shift, and go to state 45
    TK_INT         shift, and go to state 46
    TK_FLOAT       shift, and go to state 47
    TK_STR         shift, and go to state 48
    '('            shift, and go to state 49
    '{'            shift, and go to state 32

    block           go to state 120
    command         go to state 121
    command_x       go to state 122
    command_return  go to state 123
    var             go to state 124
    exp_simple      go to state 55
    func_call       go to state 125


state 101

   28 command: TK_KEY_WHILE '(' exp ')' . command

    TK_KEY_IF      shift, and go to state 41
    TK_KEY_WHILE   shift, and go to state 42
    TK_KEY_NEW     shift, and go to state 43
    TK_KEY_RETURN  shift, and go to state 44
    TK_ID          shift, and go to state 45
    TK_INT         shift, and go to state 46
    TK_FLOAT       shift, and go to state 47
    TK_STR         shift, and go to state 48
    '('            shift, and go to state 49
    '{'            shift, and go to state 32

    block           go to state 51
    command         go to state 126
    command_return  go to state 53
    var             go to state 54
    exp_simple      go to state 55
    func_call       go to state 56


state 102

   69 exp_simple: TK_KEY_NEW type '[' exp . ']'

    ']'  shift, and go to state 127


state 103

   46 exp_and: exp_and TK_AND exp_comp .
   48 exp_comp: exp_comp . TK_EQUAL exp_add
   49         | exp_comp . TK_LEQUAL exp_add
   50         | exp_comp . TK_GEQUAL exp_add
   51         | exp_comp . '<' exp_add
   52         | exp_comp . '>' exp_add

    TK_EQUAL   shift, and go to state 85
    TK_LEQUAL  shift, and go to state 86
    TK_GEQUAL  shift, and go to state 87
    '<'        shift, and go to state 88
    '>'        shift, and go to state 89

    $default  reduce using rule 46 (exp_and)


state 104

   44 exp_or: exp_and TK_OR exp_comp .
   48 exp_comp: exp_comp . TK_EQUAL exp_add
   49         | exp_comp . TK_LEQUAL exp_add
   50         | exp_comp . TK_GEQUAL exp_add
   51         | exp_comp . '<' exp_add
   52         | exp_comp . '>' exp_add

    TK_EQUAL   shift, and go to state 85
    TK_LEQUAL  shift, and go to state 86
    TK_GEQUAL  shift, and go to state 87
    '<'        shift, and go to state 88
    '>'        shift, and go to state 89

    $default  reduce using rule 44 (exp_or)


state 105

   48 exp_comp: exp_comp TK_EQUAL exp_add .
   54 exp_add: exp_add . '+' exp_mul
   55        | exp_add . '-' exp_mul

    '+'  shift, and go to state 90
    '-'  shift, and go to state 91

    $default  reduce using rule 48 (exp_comp)


state 106

   49 exp_comp: exp_comp TK_LEQUAL exp_add .
   54 exp_add: exp_add . '+' exp_mul
   55        | exp_add . '-' exp_mul

    '+'  shift, and go to state 90
    '-'  shift, and go to state 91

    $default  reduce using rule 49 (exp_comp)


state 107

   50 exp_comp: exp_comp TK_GEQUAL exp_add .
   54 exp_add: exp_add . '+' exp_mul
   55        | exp_add . '-' exp_mul

    '+'  shift, and go to state 90
    '-'  shift, and go to state 91

    $default  reduce using rule 50 (exp_comp)


state 108

   51 exp_comp: exp_comp '<' exp_add .
   54 exp_add: exp_add . '+' exp_mul
   55        | exp_add . '-' exp_mul

    '+'  shift, and go to state 90
    '-'  shift, and go to state 91

    $default  reduce using rule 51 (exp_comp)


state 109
